test/parse-error-test/annotation_mode/parse-error.expected
[error] test/parse-error-test/annotation_mode/input.ddlog[1.17] error: unknown: unrecognized mode

@mode("unknown")

                ^
